--- a/Social Checkin App/package.json
+++ b/Social Checkin App/package.json
@@ -10,16 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "@stellar/freighter-api": "^2.0.0",
     "@stellar/stellar-sdk": "^11.3.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.19",
+    "ionicons": "^7.4.0",
     "next": "^14.2.3",
+    "postcss": "^8.4.38",
     "qs": "^6.11.0",
-     "web-vitals": "^2.1.4"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwind": "^4.0.0",
+    "tailwindcss": "^3.4.4",
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
