--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ionic/react": "^8.2.2",
     "@stellar/freighter-api": "^2.0.0",
     "@stellar/stellar-sdk": "^12.1.0",
+    "ionicons": "^7.4.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
